--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -221,7 +221,7 @@ Ext.onReady(function (){
                 filter: filter
             });
             console.log(wfs_resp.priv);
-            var features = wfs.resp.priv;
+            var features = wfs_resp.priv;
         }
     });
 
