debugging wfs filtering, maptiles_geoext_map

--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -221,8 +221,7 @@ Ext.onReady(function (){
                 filter: filter
             });
             console.log(wfs_resp.priv);
-            console.log(wfs_resp.priv.a);
-            var features = wfs_resp.priv;
+            var httprequest = wfs_resp.priv;
         }
     });
 
