debugging wfs filtering, maptiles_geoext_map

--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -214,7 +214,7 @@ Ext.onReady(function (){
                 featureType: "index",
                 featureNS: "http://www.geonode.org/",
                 srsName: "EPSG:32651",
-                outputFormat: "application/json"
+                outputFormat: "gml32"
             });              
             
             var wfs_resp = wfs_proto.read({
