debugging wfs filtering, maptiles_geoext_map

--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -222,7 +222,7 @@ Ext.onReady(function (){
             });
             console.log(wfs_resp.priv);
             var httprequest = wfs_resp.priv;
-            console.log(httprequest.getResponseHeader());
+            console.log(httprequest.responseXML);
         }
     });
 
