--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -223,6 +223,7 @@ Ext.onReady(function (){
             console.log(wfs_resp.priv);
             var httprequest = wfs_resp.priv;
             httprequest.open();
+            console.log(httprequest.responseText);
         }
     });
 
