debugging wfs filtering, maptiles_geoext_map

--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -218,7 +218,10 @@ Ext.onReady(function (){
             });              
             
             var wfs_resp = wfs_proto.read({
-                filter: filter
+                filter: filter,
+                callback: function(response){
+                    console.log(response.features);
+                }
             });
             console.log(wfs_resp);
         }
