--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -221,9 +221,9 @@ Ext.onReady(function (){
                 filter: filter,
                 callback: function(response){
                     console.log(response);
-                    if(response_txt){
+                    if(response.responseText){
                         var json_parser = new OpenLayers.Format.JSON();
-                        feature_out = json_parser.read(response_txt);
+                        feature_out = json_parser.read(response.responseText);
                         console.log(feature_out);
                     }else{
                         alert("No tiles/data found in that area");
