--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -216,22 +216,23 @@ Ext.onReady(function (){
                 srsName: "EPSG:32651",
                 outputFormat: "json"
             });              
-
+            
+            var response_txt;
             var wfs_resp = wfs_proto.read({
                 filter: filter,
                 callback: function(response){
                     console.log(response);
-                    if(response.responseText){
+                    if(response.priv.responseText){
                         var json_parser = new OpenLayers.Format.JSON();
-                        feature_out = json_parser.read(response.responseText);
+                        feature_out = json_parser.read(response.priv.responseText);
+                        response_txt = response.priv.responseText
                         console.log(feature_out);
                     }else{
                         alert("No tiles/data found in that area");
                     }
-                    
                 }
             });
-
+            console.log(response_txt);
         }
     });
 
