--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -234,6 +234,7 @@ Ext.onReady(function (){
                         var json_parser = new OpenLayers.Format.JSON();
                         var feature_out = json_parser.read(response.priv.responseText);
                         for ( f in feature_out.features ){
+                            console.log(f);
                             var corners = {
                                 "ur_x": f.properties.MAXX, "ur_y": f.properties.MAXY,
                                 "ul_x": f.properties.MINX, "ul_y": f.properties.MAXY,
