--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -233,6 +233,7 @@ Ext.onReady(function (){
                     if(response.priv.responseText){
                         var json_parser = new OpenLayers.Format.JSON();
                         var feature_out = json_parser.read(response.priv.responseText);
+                        console.log(feature_out);
                         for ( f in feature_out.features ){
                             console.log(f);
                             var corners = {
