--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -233,8 +233,9 @@ Ext.onReady(function (){
                     if(response.priv.responseText){
                         var json_parser = new OpenLayers.Format.JSON();
                         var feature_out = json_parser.read(response.priv.responseText);
-                        console.log(feature_out);
-                        for ( f in feature_out.features ){
+                        console.log(feature_out.features);
+                        for ( var i; i<feature_out.totalFeatures; i++ ){
+                            var f = feature_out.features[i];
                             console.log(f);
                             var corners = {
                                 "ur_x": f.properties.MAXX, "ur_y": f.properties.MAXY,
