--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -234,7 +234,7 @@ Ext.onReady(function (){
                         var json_parser = new OpenLayers.Format.JSON();
                         var feature_out = json_parser.read(response.priv.responseText);
                         console.log(feature_out.features);
-                        for ( var i; i<feature_out.totalFeatures; i++ ){
+                        for ( var i=0; i<feature_out.totalFeatures; i++ ){
                             var f = feature_out.features[i];
                             console.log(f);
                             var corners = {
