group selection of tiles now working, maptiles_geoext_map

--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -54,7 +54,6 @@ function createTile(computed_corners){
 }
 
 function display_points(div_id, vec_layer){
-    console.log(div_id);
     var container = document.getElementById(div_id);
     container.removeChild(container.firstElementChild||container.firstChild);
     var list_element = document.createElement("ul");
@@ -229,14 +228,12 @@ Ext.onReady(function (){
             var wfs_resp = wfs_proto.read({
                 filter: filter,
                 callback: function(response){
-                    console.log(response);
-                    if(response.priv.responseText){
+                    if(response.priv.responseText.){
                         var json_parser = new OpenLayers.Format.JSON();
                         var feature_out = json_parser.read(response.priv.responseText);
                         console.log(feature_out.features);
                         for ( var i=0; i<feature_out.totalFeatures; i++ ){
                             var f = feature_out.features[i];
-                            console.log(f);
                             var corners = {
                                 "ur_x": f.properties.MAXX, "ur_y": f.properties.MAXY,
                                 "ul_x": f.properties.MINX, "ul_y": f.properties.MAXY,
@@ -254,7 +251,7 @@ Ext.onReady(function (){
                             display_points("point_display", highlight_layer);
                         }
                     }else{
-                        alert("No tiles/data found in that area");
+                        alert("Server did not respond.");
                     }
                 }
             });
