--- a/geonode/cephgeo/templates/cart.html
+++ b/geonode/cephgeo/templates/cart.html
@@ -16,12 +16,14 @@
 <!--
     #TODO: CHECK IF CART IS EMPTY BEFORE CREATING FTP REQUEST!
 -->
-      <div class="page-header">
+  <div class="page-header">
+  {% if not cart.is_empty %}
     <ul class="list-inline pull-right" id="sort">
       <li><button class="btn btn-default" data-toggle="modal" data-target="#eula-dialog">{% trans "Create FTP Folder" %}</a></li>
       <li><a href="{% url 'cephgeo.views.clear_cart' %}"><button class="btn btn-default">{% trans "Remove All Items" %}</button></a></li>
     </ul>
-    <h2 class="page-title">{% trans "Cart" %}</h2>
+  {% endif %}
+  <h2 class="page-title">{% trans "Cart" %}</h2>
     
   </div>
   <div>
