--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -228,7 +228,7 @@ Ext.onReady(function (){
             var wfs_resp = wfs_proto.read({
                 filter: filter,
                 callback: function(response){
-                    if(response.priv.responseText.){
+                    if(response.priv.responseText){
                         var json_parser = new OpenLayers.Format.JSON();
                         var feature_out = json_parser.read(response.priv.responseText);
                         console.log(feature_out.features);
