--- a/geonode/maptiles/templates/maptiles/maptiles_map_form.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_map_form.html
@@ -8,12 +8,21 @@
 
 {% block body_outer %}
   {% block body %}
+  <script type="text/javascript" >
+      function georef_validation(){
+          var georef_string = document.getElementById("georef_area").getAttribute("value");
+          console.log(georef_string);
+          return false;
+      }
+  </script>
+  
+  
   
   <div class="page-header">
     <h2 class="page-title">{% trans "Georef Input Form" %}</h2>
   </div>
   
-  <form action="/maptiles/addtocart/" method="POST">
+  <form id="georef_form" action="/maptiles/addtocart/" onsubmit ="return georef_validation();" method="POST">
      {% csrf_token %}
     <input type="textarea" name="georef_area" ></input>
     <input type="submit" name="georef_submit" value="Submit" ></input>
