--- a/geonode/maptiles/templates/maptiles/maptiles_map_form.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_map_form.html
@@ -22,10 +22,10 @@
     <h2 class="page-title">{% trans "Georef Input Form" %}</h2>
   </div>
   
-  <form id="georef_form" onsubmit ="return javascript:georef_validation();" action="/maptiles/addtocart/"  method="POST">
+  <form id="georef_form" action="/maptiles/addtocart/"  method="POST">
      {% csrf_token %}
     <input type="textarea" name="georef_area" ></input>
-    <input type="submit" name="georef_submit" value="Submit" ></input>
+    <input type="submit" name="georef_submit" value="Submit" onsubmit ="return javascript:georef_validation();" ></input>
 </form>
 {% endblock body %}
  {% block sidebar %}{% endblock sidebar %}
