--- a/geonode/maptiles/templates/maptiles/maptiles_map_form.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_map_form.html
@@ -16,14 +16,14 @@
   <form id="georef_form" action="/maptiles/addtocart/"  method="POST">
      {% csrf_token %}
     <input type="textarea" name="georef_area" ></input>
-    <input type="submit" name="georef_submit" value="Submit" onsubmit ="return georef_validation();" ></input>
+    <input id="georef_submit" type="submit" name="georef_submit" value="Submit"></input>
 </form>
  <script type="text/javascript" >
-      function georef_validation(){
-          var georef_string = document.getElementById("georef_area").getAttribute("value");
-          console.log(georef_string);
-          return false;
-      }
+      $("#georef_form").submit(function(e) {
+            console.log(e);
+            e.preventDefault();
+            //$('#georef_submit').click();
+        });
   </script>
   
   
