--- a/geonode/maptiles/templates/maptiles/maptiles_map_form.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_map_form.html
@@ -1,7 +1,7 @@
 {% extends "ceph_base.html" %}
 {% load i18n %}
 {% load url from future %}
-
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.js"></script>
 {% block title %} {% trans "Data Input Form" %} - {{ block.super }} {% endblock %}
 
 {% block body_class %}Cephgeo Data Input{% endblock %}
