debugging validatin function to georef submit, maptiles_map_form

--- a/geonode/maptiles/templates/maptiles/maptiles_map_form.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_map_form.html
@@ -23,6 +23,7 @@
             console.log(e);
             e.preventDefault();
             //$('#georef_submit').click();
+            return false;
         });
   </script>
   
