--- a/geonode/maptiles/templates/maptiles/maptiles_map_form.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_map_form.html
@@ -21,7 +21,8 @@
  <script type="text/javascript" >
      $(document).ready(function(){
         $("#georef_form").submit(function(e) {
-            e.preventDefault();
+            alert("submit pressed");
+            e.preventDefault(); 
             //$('#georef_submit').click();
         });
     }
