--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -8,8 +8,8 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.js"></script>
 <script type="text/javascript" >
     $(document).ready(function(){
+        alert("hello world!");
        $("#georef_form").submit(function(e) {
-           alert("submit pressed");
            e.preventDefault(); 
            //$('#georef_submit').click();
        });
