--- a/geonode/maptiles/templates/maptiles/maptiles_map_form.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_map_form.html
@@ -12,7 +12,7 @@
     <h2 class="page-title">{% trans "Georef Input Form" %}</h2>
   </div>
   
-  <form id="georef_form" name="georef_form" method="POST">
+  <form method="POST"  id="georef_form" name="georef_form" >
      {% csrf_token %}
     <input type="textarea" name="georef_area" ></input>
     <input id="georef_submit" type="submit" name="georef_submit" value="Submit"></input>
