--- a/geonode/maptiles/templates/maptiles/maptiles_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_map.html
@@ -49,7 +49,7 @@
 <!--
  <h3 class="page-title">Data Class</h3>
 -->
- <form action="/maptiles/addtocart/" method="POST" name="georef_form" id="georef_name">
+ <form name="georef_form" id="georef_name" action="/maptiles/addtocart/" method="POST" >
      {% csrf_token %}
 <!--
      <div class="col-md-4">
