--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -9,9 +9,11 @@
 <script type="text/javascript" >
     $(document).ready(function(){
        $("#georef_form").submit(function(e) {
-           alert("hello world!");
+           var json_parser = new OpenLayers.Format.JSON()
+           var georef_string = document.getElementById("georef_area").getAttribute("value");
+           var json = json_parser.write(georef_string);
+           $.post('validate', json);
            e.preventDefault(); 
-           //$('#georef_submit').click();
        });
     });
 </script>
