--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -12,6 +12,7 @@
            var json_parser = new OpenLayers.Format.JSON()
            var georef_string = document.getElementById("georef_area").getAttribute("value");
            var json = json_parser.write(georef_string);
+           console.log(json);
            $.post('validate', json);
            e.preventDefault(); 
        });
