--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -11,8 +11,8 @@
        $("#georef_form").submit(function(e) {
            var json_parser = new OpenLayers.Format.JSON()
            var georef_string = document.getElementById("georef_area").getAttribute("value");
-           console.log(georef_string);
-           var json = json_parser.write(georef_string);
+           
+           var json = json_parser.write(georef_string.replace(/,/g , " "));
            console.log(json);
            $.post('validate/', json);
            e.preventDefault(); 
