removed changing the format of georef_string in maptiles_geoext_map

--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -81,7 +81,7 @@ function display_points(div_id, vec_layer){
             this.parentNode.removeChild(this);
         };
         list_element.appendChild(item_element);
-        georef_string+=tile_list[i].georef+",";
+        georef_string+=","+tile_list[i].georef;
     }
    document.getElementById("georef_area").setAttribute("value",georef_string);
 }
