--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -27,6 +27,7 @@
                             alert("The total file size of your request is "+formatBytes(data.total_size, 2)+" . Your request exceeds the 200MB download limit.")
                             console.log(e);
                             e.preventDefault();
+                            return false;
                         }
                 },
                 "json"
