debugging maptiles_geoext_map

--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -25,7 +25,7 @@
                 {"georefs" : georef_string}).done(function(result){
                    if (result.response) self.submit;
                 }).fail(function(result){
-                    alert("The total file size of your request is "+formatBytes(data.total_size, 2)+" . Your request exceeds the 200MB download limit.");
+                    alert("The total file size of your request is "+formatBytes(result.total_size, 2)+" . Your request exceeds the 200MB download limit.");
                 });
        });
     });
