debugging cart size display, maptiles_geoext_map

--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -25,7 +25,7 @@
            $.post('validate/', 
                 {"georefs" : georef_string}).done(function(result){
                    if (result.response) 
-                        self.submit();
+                        //self.submit();
                    else 
                    console.log(formatBytes(result.cart_total_size, 2));
                     alert("The total file size of this request is "+formatBytes(result.total_size, 2)+
