debugging cart size display, maptiles_geoext_map

--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -8,11 +8,12 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.js"></script>
 <script type="text/javascript" >
     function formatBytes(bytes, decimals) {
-        if(bytes == 0) return '0 Byte';
+        console.log(bytes)
+        if(bytes == 0) 
+            return '0 Byte';
         var k = 1024;
         var sizes = ['Bytes', 'KB', 'MB', 'GB', 'TB', 'PB', 'EB', 'ZB', 'YB'];
         var i = Math.floor(Math.log(bytes) / Math.log(k));
-        console.log(i);
         return (bytes / Math.pow(k, i)).toPrecision(decimals + 1) + ' ' + sizes[i];
     }
     
@@ -28,9 +29,9 @@
                         //self.submit();
                         console.log(result);
                    else 
-                   console.log(formatBytes(result.cart_total_size, 2));
+                   console.log(formatBytes(result.cart_size, 2));
                     alert("The total file size of this request is "+formatBytes(result.total_size, 2)+
-                                " . You also have a total of "+formatBytes(result.cart_total_size, 2)+
+                                " . You also have a total of "+formatBytes(result.cart_size, 2)+
                                 "in the data cart. Your request exceeds the 200MB download limit. Please reduce number of selected tiles.");
                 })
        });
